samples/_failures_safe/1761043807_eb07ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6113a1cc.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_6113a1cc.c:135:12: error: missing terminating " character
  135 |     printf("Entries with level %s
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6113a1cc.c:135:5: error: expected expression at end of input
  135 |     printf("Entries with level %s
      |     ^~~~~~
./samples/SAFE/__tmp_6113a1cc.c:135:5: error: expected declaration or statement at end of input
